Showing all cases in Main method and change of house service